--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -130,7 +130,7 @@
 </head>
 <body>
     <div>
-        <h1>Quotes Gallery-last-deployment</h1>
+        <h1>Quotes Gallery-17-Nov</h1>
         <form method="POST">
             <input type="text" name="quote" placeholder="Enter a quote" required>
             <input type="text" name="author" placeholder="Author">
